--- a/sphere_packing_ineq.ipynb
+++ b/sphere_packing_ineq.ipynb
@@ -5,18 +5,14 @@
    "id": "194b0da1",
    "metadata": {},
    "source": [
-    "This is a supplementary sage notebook for the paper \"Algebraic proof\". This code checks the modular form identities appearing in the paper."
+    "This is a supplementary sage notebook for the paper \"Algebraic proof of modular form inequalities for optimal sphere packings\". This code checks the modular form identities appearing in the paper."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4513c630",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from posqmf import *"
@@ -42,11 +38,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "2382d963",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -110,11 +102,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "c6521fbc",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -187,11 +175,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "05a9c3c3",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_6_1 = extremal_qm(6, 1)\n",
@@ -226,11 +210,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "bf43198a",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -277,11 +257,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "e2dba4b4",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -326,11 +302,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "64162d5c",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -384,11 +356,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "8ffeb600",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -441,11 +409,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "a15df198",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert L_1_0_8d == (15/2) * H2^3 * (H2 + H4)^2 * H4^2 * (E2_ * E4_ - E6_) * (E4_ - (1/2) * E2_ * (H2 + 2 * H4))"
@@ -466,11 +430,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "0b1f441a",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -520,11 +480,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "04665df7",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -564,11 +520,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "5ace1a24",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -611,11 +563,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "103a2709",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -662,11 +610,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "63e61884",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -720,11 +664,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "fc272323",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -777,11 +717,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "0bca19e1",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "p = ip * ioz^3 - (10/3) * ip^2 * ioz^2\n",
@@ -823,11 +759,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "fb8dca3d",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -907,11 +839,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "b64b70b0",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -984,11 +912,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "78ebf972",
-   "metadata": {
-    "vscode": {
-     "languageId": "sage"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1041,7 +965,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.5"
